--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="container mb-5 text-center">
 			<row class="row d-flex justify-content-center">
 				<div class="col-md-8 my-5">
-					<img src="img/m1.gif" class="img-fluid">
+					<img src="img/M1.gif" class="img-fluid">
 				</div>
 			</row>
 		</div>
@@ -356,13 +356,13 @@
 			</row>
 			<row class="row  d-flex justify-content-center">
 				<div class="col-md-3 col-4">
-					<img src="img/ab3.jpg" class="img-fluid" onmouseover="abgif1(this)" onmouseout="abgif1out(this)">
+					<img src="img/AB3.jpg" class="img-fluid" onmouseover="abgif1(this)" onmouseout="abgif1out(this)">
 				</div>
 				<div class="col-md-3 col-4">
-					<img src="img/ab4.jpg" class="img-fluid" onmouseover="abgif2(this)" onmouseout="abgif2out(this)">
+					<img src="img/AB4.jpg" class="img-fluid" onmouseover="abgif2(this)" onmouseout="abgif2out(this)">
 				</div>
 				<div class="col-md-3 col-4">
-					<img src="img/ab5.jpg" class="img-fluid" onmouseover="abgif3(this)" onmouseout="abgif3out(this)">
+					<img src="img/AB5.jpg" class="img-fluid" onmouseover="abgif3(this)" onmouseout="abgif3out(this)">
 				</div>
 			</row>
 		</div>
