--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	  					<div class="row align-items-center d-flex justify-content-center">
 		  					<div class="col-md-4 col-8 text-white">
 		  						<h1 class="fw-bolder mb-4 text-start">Modelado 3D</h1>
-		  						<p class="mb-4 text-start">Elaboración de modelos tridimensionales orientados a objetos, buscando un alto nivel de realismo para ser utilziados en otros materiales publicitarios.</p>
+		  						<p class="mb-4 text-start">Elaboración de modelos tridimensionales orientados a objetos, buscando un alto nivel de realismo para ser utilizados en otros materiales publicitarios.</p>
 		  						<ul class="list-unstyled mb-4 row ">
 		  							<li class="col" role="button">
 		  								<img src="img/workbook/3d1thumb.jpg" class="img-fluid thumbnail" onclick="Replace3D(this.src)">
