--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	  					<div class="row align-items-center d-flex justify-content-center">
 		  					<div class="col-md-4 col-8 text-white">
 		  						<h1 class="fw-bolder mb-4 text-start">Modelado 3D</h1>
-		  						<p class="mb-4 text-start">Elaboración de modelos tridimensionales orientados a objetos, buscando un alto nivel de realismo para ser utilizados en otros materiales publicitarios.</p>
+		  						<p class="mb-4 text-start">Elaboración de modelos tridimensionales orientados a objetos, buscando un alto grado de realismo para ser utilizados en otros materiales publicitarios.</p>
 		  						<ul class="list-unstyled mb-4 row ">
 		  							<li class="col" role="button">
 		  								<img src="img/workbook/3d1thumb.jpg" class="img-fluid thumbnail" onclick="Replace3D(this.src)">
@@ -267,7 +267,7 @@
 	  					<div class="row align-items-center d-flex justify-content-center">
 		  					<div class="col-md-4 col-8 text-white">
 		  						<h1 class="fw-bolder mb-2 text-start">Motion</h1>
-		  						<p class="mb-4 text-start">Edición de vídeo y/o animación en Motion Graphics, brindando un toque de creatividad único y usando al máximo los elementos de cada marca.</p>
+		  						<p class="mb-4 text-start">Edición de vídeo y/o animación en Motion Graphics, brindando un toque de creatividad único utilizando al máximo los elementos de cada marca.</p>
 		  						<ul class="list-unstyled mb-4 row">
 		  							<li class="col"><a href="https://vimeo.com/843741151?share=copy" target="_blank"><img src="img/workbook/thumb.jpg" class="img-fluid thumbnail"></a></li>
 		  							<li class="col"><a href="https://vimeo.com/843739850?share=copy" target="_blank"><img src="img/workbook/thumb2.jpg" class="img-fluid thumbnail"></a></li>
